--- a/packages.config
+++ b/packages.config
@@ -3,23 +3,23 @@
   <package id="akavache" version="5.0.0" targetFramework="xamarinios10" />
   <package id="akavache.core" version="5.0.0" targetFramework="xamarinios10" />
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="xamarinios10" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios10" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="xamarinios10" />
-  <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="xamarinios10" />
   <package id="Rx-Core" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Main" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Splat" version="6.1.7" targetFramework="xamarinios10" />
-  <package id="SQLitePCL.raw_basic" version="0.8.5" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.13" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.core" version="1.1.13" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.ios_unified.static" version="1.1.13" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.provider.internal.ios_unified" version="1.1.13" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.ios_unified.static" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.provider.internal.ios_unified" version="1.1.0" targetFramework="xamarinios10" />
   <package id="SVProgressHUD" version="2.2.5" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
@@ -39,7 +39,7 @@
   <package id="System.Linq" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="xamarinios10" />
-  <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Primitives" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reactive" version="4.1.3" targetFramework="xamarinios10" />
